--- a/web/x-fieldvalue.html
+++ b/web/x-fieldvalue.html
@@ -33,8 +33,8 @@
             <xdateinput class="fieldInput" inputid="{{variable.id}}" inputplaceholder="{{variable.htmlInputPlaceholder}}" inputmaxlength="{{variable.length}}" bind-value="value.low"></xdateinput>
           </template>
           <template if="!variable.customInput">
-            <input class="fieldInput" id="{{variable.id}}" placeholder="{{variable.htmlInputPlaceholder}}" type="{{variable.htmlInputType}}" maxlength="{{variable.length}}" on-focus="showLowValues=true" bind-value="value.low">
             <x-values bind-show="showLowValues" values="{{model.globalState.charValues}}" variablevalue="{{value}}" variable="{{variable}}" bind-valueid="value.low"></x-values>
+            <input class="fieldInput" id="{{variable.id}}" placeholder="{{variable.htmlInputPlaceholder}}" type="{{variable.htmlInputType}}" on-focus="showLowValues=true" bind-value="value.low">            
           </template>                  
           <template if="variable.interval=='S' || variable.interval=='I'">
             <label>até</label>
@@ -42,8 +42,8 @@
               <xdateinput class="fieldInput" inputplaceholder="{{variable.htmlInputPlaceholder}}" inputmaxlength="{{variable.length}}" bind-value="value.high" on-focus="changedHigh(variable, value)"></xdateinput>
             </template>
             <template if="!variable.customInput">
-              <input class="fieldInput" placeholder="{{variable.htmlInputPlaceholder}}" type="{{variable.htmlInputType}}" maxlength="{{variable.length}}" bind-value="value.high" on-focus="showHighValues=true" on-change="changedHigh(variable, value)">
-              <x-values bind-show="showHighValues" values="{{model.globalState.charValues}}" variablevalue="{{value}}" variable="{{variable}}" bind-valueid="value.high"></x-values>
+              <x-values bind-show="showHighValues" values="{{model.globalState.charValues}}" variablevalue="{{value}}" variable="{{variable}}" bind-valueid="value.high"></x-values>             
+              <input class="fieldInput" placeholder="{{variable.htmlInputPlaceholder}}" type="{{variable.htmlInputType}}" bind-value="value.high" on-focus="showHighValues=true" on-change="changedHigh(variable, value)">
             </template>
             <template if="variable.interval=='S'">
               <button class="button2" on-click="add()">+</button>
