--- a/web/mockauth.html
+++ b/web/mockauth.html
@@ -3,7 +3,7 @@
   <head>
     <script type="text/javascript">
       function sendMessage(){
-        parent.postMessage('{"user":"GERLEITE","name":"Gervásio Leite","datetime":"2014-01-01 10:01:34","key":"242144499BC736EC1D46670A3F24DF0CFC3FC80F84E819F847B469EE7DFC682E"}','*');
+        parent.postMessage('{"user":"JFURTADO","name":"João Furtado","datetime":"2012-01-01 10:01:34","key":"242144499BC736EC1D46670A3F24DF0CFC3FC80F84E819F847B469EE7DFC682E"}','*');
       }
       window.onload = sendMessage;
     </script>
